# haailmo

./: .gitignore  Handlers.hs  Main.hs  Model.hs  _fonts.scss  haailmo.cabal  sivu.html  style.scss
fonts/: tangerine_regular-webfont.eot
static/: kiitos.html  script.js  sivu.html  style.scss
static/fonts/: tangerine_bold-demo.html  tangerine_bold-webfont.eot  tangerine_regular-demo.html
