name:               haailmo
version:            0.1
cabal-version:      >= 1.10
author:             Tuukka Ylönen
synopsis:           The code must flow.
category:           Misc
tested-with:        GHC
build-type:         Simple
  
executable "haailmo"
    build-depends: 
                   base >= 4 && < 5          
                   ,happstack-server
                   ,text
                   ,acid-state
                   ,safecopy
                   ,mtl
    default-language: Haskell2010

    ghc-options: -O2 -Wall -fwarn-tabs
    main-is: Main.hs    